--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.error.whitelabel.enabled=false
+server.error.include-exceptiion=true
+#server.error.include-message=on_param
+#server.error.include-stacktrace=on_param
+#server.error.include-binding-errors=on_param
+# on_param??? parameter? ??? ??? # http://localhost:8080/error-ex?message=&errors=&trace=
+# application/json ?? ?? ??
